# city-ongs

./: .env.example  .gitignore  .pre-commit-config.yaml  .~lock.Expenses01.xlsx#  .~lock.archive-12:55:32.xlsx#  .~lock.archive-12:59:52.xlsx#  .~lock.archive-13:26:24.xlsx#  .~lock.archive-23:02:44.xlsx#  CLAUDE.MD  Expenses01.xlsx  Makefile  README.md  app.yaml  archive-12:42:26.xlsx  archive-14:29:56.xlsx  archive-19:41:06.xlsx  archive-21:04:57.xlsx  archive-21:13:22.xlsx  archive-21:28:03.xlsx  archive-21:30:58.xlsx  archive-21:45:20.xlsx  archive-22:54:51.xlsx  archive-23:02:44.xlsx  db.sqlite3  docker-compose.yml  dockerfile  init_script.py  manage.py  pyproject.toml
.cursor/rules/: accountability-project.mdc
.github/workflows/: google-cloudrun-source.yml  pre-release.yml  production-deploy.yml
accountability/: admin.py  forms.py  models.py  services.py  urls.py  views.py
accountability/csv/: __init__.py  csv_exporter.py  csv_importer.py
accountability/migrations/: 0001_initial.py  0002_initial.py  0003_alter_accountability_status_and_more.py  0003_alter_expenseanalysis_options_and_more.py  0003_alter_favored_document.py  0003_alter_resourcesource_organization.py  0003_favored_organization.py  0004_alter_expense_source_alter_favored_organization_and_more.py  0004_expense_due_date_historicalexpense_due_date.py  0004_expensesource_expense_source_and_more.py  0004_favored_remove_expense_reconciled_and_more.py  0004_historicalrevenue_conciled_historicalrevenue_paid_and_more.py  0005_alter_expense_favored.py  0005_alter_expense_nature_alter_historicalexpense_nature.py  0005_alter_expensesource_options_and_more.py  0005_alter_historicalrevenue_source_alter_revenue_source.py  0005_historicalrevenue_bank_account_and_more.py  (+34 more)
accounts/: admin.py  forms.py  middlewares.py  models.py  services.py  urls.py  views.py
activity/: admin.py  apps.py  models.py  services.py  signals.py
bank/: admin.py  forms.py  models.py  urls.py  views.py
contracts/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
core/: middlewares.py  models.py  settings.py  urls.py  views.py  wsgi.py
dashboard/: urls.py  views.py
dumps/: db-dumb.sqlite3  db-dump.sqlite3  db-dumps.sqlite3
infra/: setup_redis.sh
ongs/: settings.py  urls.py  wsgi.py
reports/: admin.py  forms.py  models.py  services.py  urls.py  views.py
sendgrid_client/: client.py  email_template.py
templates/: base.html  force_password_change.html  home.html
transparency_portal/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
utils/: admin.py  cache_invalidation.py  cache_keys.py  cache_utils.py  choices.py  fields.py  formats.py  logging.py  managers.py  mixins.py  models.py  monitoring.py  password.py  query.py  regex.py  shell.py  validators.py  widgets.py
(+353 files in other folders)
