[tool.poetry]
name = "orgs"
version = "0.1.0"
description = ""
authors = ["Vitor Toledo <vitor.toledo@grupomateus.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
makefile = "^1.1.0"
django-easy-tenants = "^0.9.2"
ruff = "^0.8.4"
pre-commit = "^4.0.1"
django-cpf-cnpj = "^1.0.0"
django-simple-history = "^3.7.0"
xlsxwriter = "^3.2.0"
django-health-check = "^3.18.3"
fpdf2 = "^2.8.2"
ofxtools = "^0.9.5"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
