[project]
name = "orgs"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [
    { name = "Vitor Toledo", email = "pr.vitortoledo@gmail.com" },
]
dependencies = [
    "django-easy-tenants>=0.9.2,<0.10.0",
    "django-cpf-cnpj>=1.0.0,<2.0.0",
    "django-simple-history>=3.7.0,<4.0.0",
    "xlsxwriter>=3.2.0,<4.0.0",
    "django-health-check>=3.18.3,<4.0.0",
    "fpdf2>=2.8.2,<3.0.0",
    "ofxtools>=0.9.5,<0.10.0",
    "pandas>=2.2.3,<3.0.0",
    "openpyxl>=3.1.5,<4.0.0",
    "gunicorn>=23.0.0,<24.0.0",
    "psycopg2>=2.9.10,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "django-environ>=0.12.0,<0.13.0",
    "google-cloud-secret-manager>=2.23.0,<3.0.0",
    "google-cloud-storage>=3.0.0,<4.0.0",
    "django-storages[google]>=1.14.5,<2.0.0",
    "sendgrid>=6.11.0,<7.0.0",
    "django-phonenumber-field[phonenumberslite]>=8.0.0,<9.0.0",
    "phonenumbers>=8.13.30,<9.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4,<0.9.0",
    "pre-commit>=4.0.1,<5.0.0",
    "ipython>=9.0.2,<10.0.0",
]

[tool.uv]
package = false
